2008-02-26  Ivan N. Zlatev  <contact@i-nz.net>

	* GridEntry.cs: Optimization in ToggleValue so that it caches
	the current value.
	* PropertyGridView.cs: An optimization so that the property isn't 
	re-read twice for each StandardValue added to the drop-down menu.
	Patch by Andy Hume <andyhume32@yahoo.co.uk> under the MIT/X11
	license.
	[Fixes bug #362755]

2008-02-25  Ivan N. Zlatev  <contact@i-nz.net>

	* GridEntry.cs: Use the PropertyDescriptor.PropertyType instead 
	of GetType on the value as it uses reflection to 
	determine the type. This fixes the case where the new value is 
	null.
	[Fixes #358332]

2008-02-25  Ivan N. Zlatev  <contact@i-nz.net>

	* PropertyGridView.cs: Limit mousewheel scrolling to not scroll
	past the view.

2008-02-20  Ivan N. Zlatev  <contact@i-nz.net>

	* PropertyGridView.cs: Fix a NRE when closing the drop down form.

2008-02-20  Ivan N. Zlatev  <contact@i-nz.net>

	* PropertyGridView.cs: 
	 - Fix a NRE that caused a test failure
	 - Another performance improvement - cache the standard values
	 listbox.

2008-02-19  Ivan N. Zlatev  <contact@i-nz.net>

	[Backport to 1.9]
	* PropertyGridView.cs: Fix a big performance bug.

2008-02-17  Ivan N. Zlatev  <contact@i-nz.net>

	[Backport to 1.9]
	* GridEntry.cs: Set expanded state before notifying that the
	expansion has taken place.
	* PropertyGridView.cs:
	 - Set the propertygridtextbox text to the selected 
	 StandardValue before proceeding to setting it.
	 - Scrolling bugfixes.

2008-02-16  Ivan N. Zlatev  <contact@i-nz.net>

	* GridEntry.cs:
	 - Fix ValueText to not return null.
	 - Fix conversion error reporting to actually happen.
	* PropertyGridView.cs: Set entry only if the text has changed.
	[Fixes bug #362116]

2008-02-16  Ivan N. Zlatev  <contact@i-nz.net>

	[Backport to 1.9]
	* GridEntry.cs: 
	 - Fix handling of a null current value.
	 - Swallow editor exceptions.
	[Fixes bug #362114]

2008-02-16  Ivan N. Zlatev  <contact@i-nz.net>

	[Backport to 1.9]